[gd_scene load_steps=4 format=2]

[ext_resource path="res://User Interface/PixelText.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Audio/click1.ogg" type="AudioStream" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
modulate = Color( 0, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 144.0
margin_top = 81.0
margin_right = 256.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
margin_right = 112.0
margin_bottom = 12.0
text = "Game Paused"
align = 1

[node name="Resume" type="Button" parent="Menu/VBoxContainer"]
margin_top = 16.0
margin_right = 112.0
margin_bottom = 34.0
text = "Resume Game"

[node name="Restart" type="Button" parent="Menu/VBoxContainer"]
margin_top = 38.0
margin_right = 112.0
margin_bottom = 56.0
text = "Restart"

[node name="Return" type="Button" parent="Menu/VBoxContainer"]
margin_top = 60.0
margin_right = 112.0
margin_bottom = 78.0
text = "Return to Main Menu"

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
visible = false
margin_top = 82.0
margin_right = 112.0
margin_bottom = 100.0
text = "Quit Game"

[connection signal="pressed" from="Menu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
